fixed h3 size on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,7 @@ body {
 
 .home > h3 {
   margin-top: 10px;
+  font-size: min(18px, 4vw);
 }
 
 /* timer */
